# platform.core.location.lbs-server-plugin-replay

./: CMakeLists.txt  COPYING  Makefile.am  configure.ac  libslp-lbs-plugin-replay.manifest
debian/: changelog  control  libslp-lbs-plugin-replay.install.in  libslp-lbs-plugin-replay.postinst.in  rules
gps-plugin/: CMakeLists.txt  Makefile.am
gps-plugin/include/: gps_plugin_debug.h  nmea_parser.h  setting.h
gps-plugin/src/: gps_plugin_replay.c  nmea_parser.c  setting.c
packaging/: lbs-server-plugin-replay.manifest  lbs-server-plugin-replay.spec  libslp-lbs-plugin-replay.spec  libslp-lbsplugin-replay.spec
replay-plugin/: Makefile.am
replay-plugin/include/: gps_plugin_debug.h  nmea_parser.h  setting.h
replay-plugin/src/: gps_plugin_replay.c  nmea_parser.c  setting.c
xps-plugin/: Makefile.am
xps-plugin/include/: geoclue_plugin_debug.h
xps-plugin/src/: geoclue_xps_plugin_replay.c  geoclue_xps_plugin_test.c
